# coxeter

./: CMakeLists.txt  README.md  Taskfile.yml  conanfile.py
cmake/: ProjectSettings.cmake  ProjectVersion.cmake
include/: CMakeLists.txt
include/coxeter/: CMakeLists.txt  coxeter.h  platform.h  point.h  types.h  version.h
tests/: CMakeLists.txt  test_point.cpp
